--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,8 +12,7 @@
   max-width: 700px;
   padding: 10px; /* Reducir el padding */
   text-align: left;
-  margin-top: 20px;
-  margin: 0 auto;
+  margin: 10px auto 0;
 }
 
 .chart-container {
